Bug 84608 - TOOLBAR: Right-click customize crashes LibO
Summary: TOOLBAR: Right-click customize crashes LibO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: highest critical
Assignee: Julien Nabet
URL:
Whiteboard: target:4.4.0
Keywords: haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2014-10-02 21:24 UTC by Yousuf Philips (jay) (retired)
Modified: 2014-10-04 17:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
linux backtrace (21.78 KB, text/plain)
2014-10-02 21:24 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-10-02 21:24:05 UTC
Created attachment 107239 [details]
linux backtrace

If you right-click on a toolbar and press 'customize', LibO crashes.

Version: 4.4.0.0.alpha0+
Build ID: 0ada00bd9b4f10861d37b8802564a2ace7385aa2
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2014-10-01_06:15:34

On windows, the customize dialog appears and when i click cancel, there is a Fatal Error dialog that appears with 'Access violation - no RTTI data!' and then it crashes.

Version: 4.4.0.0.alpha0+
Build ID: 6a6e8628bdbe60931ce8e7fa9f4bb66170f7737b
TinderBox: Win-x86@39, Branch:master, Time: 2014-09-30_00:24:33

This bug has been there for the last couple of days, but i was waiting for it to fix itself, but it seems it hasnt been.
Comment 1 Julien Nabet 2014-10-03 20:42:12 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

The problem is here specifically:
#0  0x00002aaaabc98630 in __dynamic_cast () from /usr/lib/x86_64-linux-gnu/libstdc++.so.6
#1  0x00002aaab0ec30c6 in Menu::SetPopupMenu (this=0x2bef410, nItemId=1, pMenu=0x0) at /home/julien/compile-libreoffice/libreoffice/vcl/source/window/menu.cxx:778
#2  0x00002aaac44525f1 in framework::ToolBarManager::ImplClearPopupMenu (this=0x2bf0de0, pToolBar=0x2bf0890)
    at /home/julien/compile-libreoffice/libreoffice/framework/source/uielement/toolbarmanager.cxx:1590
#3  0x00002aaac445431a in framework::ToolBarManager::MenuSelect (this=0x2bf0de0, pMenu=0x2bef410)
    at /home/julien/compile-libreoffice/libreoffice/framework/source/uielement/toolbarmanager.cxx:1993
#4  0x00002aaac4453619 in framework::ToolBarManager::LinkStubMenuSelect (pThis=0x2bf0de0, pCaller=0x2bef410)
    at /home/julien/compile-libreoffice/libreoffice/framework/source/uielement/toolbarmanager.cxx:1819
Comment 2 Julien Nabet 2014-10-03 21:02:23 UTC
Noel: I don't know if you use automatic tools to fix c cast style with C++ cast style but, do you think there could be other cases like this one?
(BTW: great job indeed to remove all the c cast style! Hope nobody will add some ones in new code! :-))