Resolves fdo#84608: Right-click customize crashes LibO

Regression from 26f2da07b1c6074e519d28557a3d1d5518ff6cb4

Change-Id: I382c4686b5fff0c04bdb36f1859c8ea5b2424772